--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -17,7 +17,7 @@
       <main>
         <section class="cart-section">
             <div class="products-list">
-                <h3>لیست محصولات</h3>
+                <h3>سبد خرید</h3>
                 <div class="products">
                     <div class="product">
                         <a class="special" href="">
@@ -31,6 +31,9 @@
                                     <span class="rate-number">۵</span>
                                 </div>
                                 <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                                <button class="delete-product">
+                                    <img src="/assets/icons/trash.png" alt="">
+                                </button>
                             </div>
                         </a>
                     </div>
@@ -46,6 +49,9 @@
                                     <span class="rate-number">۵</span>
                                 </div>
                                 <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                                <button class="delete-product">
+                                    <img src="/assets/icons/trash.png" alt="">
+                                </button>
                             </div>
                         </a>
                     </div>
@@ -61,6 +67,9 @@
                                     <span class="rate-number">۵</span>
                                 </div>
                                 <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                                <button class="delete-product">
+                                    <img src="/assets/icons/trash.png" alt="">
+                                </button>
                             </div>
                         </a>
                     </div>
@@ -76,6 +85,9 @@
                                     <span class="rate-number">۵</span>
                                 </div>
                                 <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                                <button class="delete-product">
+                                    <img src="/assets/icons/trash.png" alt="">
+                                </button>
                             </div>
                         </a>
                     </div>
@@ -91,6 +103,9 @@
                                     <span class="rate-number">۵</span>
                                 </div>
                                 <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                                <button class="delete-product">
+                                    <img src="/assets/icons/trash.png" alt="">
+                                </button>
                             </div>
                         </a>
                     </div>
@@ -99,6 +114,7 @@
             <div class="order-details">
                 <h5>جزییات سفارش</h5>
                 <span class="sum-of-all">جمع کل : ۶۹,۸۰۰,۰۰۰ تومان</span>
+                <span class="payable">قابل پرداخت : ۶۹,۸۰۰,۰۰۰ تومان</span>
                 <button class="place-order-btn">ثبت سفارش</button>
             </div>
         </section>
