--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -33,6 +33,7 @@
 .main main .cart-section .products-list .products .product a .detail {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .main main .cart-section .products-list .products .product a .detail h5 {
@@ -54,6 +55,20 @@
   width: 25px;
 }
 
+.main main .cart-section .products-list .products .product a .detail .delete-product {
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.14);
+  border-radius: 11px;
+  margin-right: auto;
+  padding: 5px;
+  width: fit-content;
+  cursor: pointer;
+}
+
+.main main .cart-section .products-list .products .product a .detail .delete-product img {
+  width: 25px;
+}
+
 .main main .cart-section .order-details {
   display: flex;
   flex-direction: column;
@@ -71,8 +86,12 @@
 }
 
 .main main .cart-section .order-details .sum-of-all {
+  padding: 10px;
+}
+
+.main main .cart-section .order-details .payable {
   border-bottom: 1px solid rgba(0, 0, 0, 0.14);
-  padding: 15px;
+  padding: 10px;
 }
 
 .main main .cart-section .order-details .place-order-btn {
