--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <title>وبسایت فروشگاهی</title>
     <link rel="icon" type="image/x-icon" href="/assets/icons/brand.png" />
     <link rel="stylesheet" href="/libs/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/libs/notyf/notyf.min.css">
     <link rel="stylesheet" href="/styles/global.css" />
     <link rel="stylesheet" href="/styles/index.css">
   </head>
@@ -222,6 +223,10 @@
       </main>
       <%- include("includes/footer") %>
     </div>
+    <script>
+      window.isLoggedInNow = JSON.parse('<%- JSON.stringify(isLoggedInNow) %>')
+    </script>
+    <script src="/libs/notyf/notyf.min.js"></script>
     <script src="/libs/swiper/swiper-bundle.min.js"></script>
     <script src="/scripts/global.js"></script>
     <script src="/scripts/index.js"></script>
