--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,6 +6,7 @@
     <title>ثبت نام | وبسایت فروشگاهی</title>
     <link rel="icon" type="image/x-icon" href="/assets/icons/brand.png" />
     <link rel="stylesheet" href="/styles/global.css" />
+    <link rel="stylesheet" href="/libs/notyf/notyf.min.css">
     <link rel="stylesheet" href="/styles/register.css">
   </head>
   <body>
@@ -21,40 +22,72 @@
         <div class="title">
           <h5>ثبت نام</h5>
         </div>
-        <form action="">
+        <form action="/auth/register" method="post">
           <div class="inputs">
             <div class="input">
               <img src="/assets/icons/mail.png" alt="" />
               <input
                 type="email"
                 name="email"
+                value="<%= oldData ? oldData.email : '' %>"
                 required
                 placeholder="ایمیل خود را وارد کنید..."
               />
             </div>
+            <ul class="field-errors">
+              <% if(errors && errors.length > 0){ %>
+                <% errors.map(error => { %>
+                  <% if(error.field == "email") { %>
+                    <li><%= error.error %></li>
+                  <% } %>
+                <% }); %>
+              <% } %>
+            </ul>
             <div class="input">
               <img src="/assets/icons/name.png" alt="" />
               <input
                 type="text"
                 name="first_name"
+                value="<%= oldData ? oldData.first_name : '' %>"
                 required
                 placeholder="نام خود را وارد کنید..."
               />
             </div>
+            <ul class="field-errors">
+              <% if(errors && errors.length > 0){ %>
+                <% errors.map(error => { %>
+                  <% if(error.field == "first_name") { %>
+                    <li><%= error.error %></li>
+                  <% } %>
+                <% }); %>
+              <% } %>
+            </ul>
             <div class="input">
               <img src="/assets/icons/name.png" alt="" />
               <input
                 type="text"
                 name="last_name"
+                value="<%= oldData ? oldData.last_name : '' %>"
                 required
                 placeholder="نام خانوادگی خود را وارد کنید..."
               />
             </div>
+            <ul class="field-errors">
+              <% if(errors && errors.length > 0){ %>
+                <% errors.map(error => { %>
+                  <% if(error.field == "last_name") { %>
+                    <li><%= error.error %></li>
+                  <% } %>
+                <% }); %>
+              <% } %>
+            </ul>
             <div class="input">
               <img src="/assets/icons/password.png" alt="" />
               <input
                 type="password"
+                id="password"
                 name="password"
+                value="<%= oldData ? oldData.password : '' %>"
                 required
                 placeholder="رمز عبور خود را وارد کنید..."
               />
@@ -62,11 +95,22 @@
                 <img src="/assets/icons/eye.png" alt="">
               </button>
             </div>
+            <ul class="field-errors">
+              <% if(errors && errors.length > 0){ %>
+                <% errors.map(error => { %>
+                  <% if(error.field == "password") { %>
+                    <li><%= error.error %></li>
+                  <% } %>
+                <% }); %>
+              <% } %>
+            </ul>
             <div class="input">
               <img src="/assets/icons/password.png" alt="" />
               <input
                 type="password"
-                name="repeat-password"
+                id="repeat-password"
+                name="repeat_password"
+                value="<%= oldData ? oldData.password : '' %>"
                 required
                 placeholder="تکرار رمز عبور را وارد کنید..."
               />
@@ -81,6 +125,12 @@
         <a href="/">صفحه اصلی</a>
       </div>
     </div>
+    <script src="/libs/notyf/notyf.min.js"></script>
     <script src="/scripts/register.js"></script>
+    <script>
+      if('<%= error %>') {
+        notyf.error('<%= error %>');
+      }
+    </script>
   </body>
 </html>
