--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,7 @@
     <title>ورود | وبسایت فروشگاهی</title>
     <link rel="icon" type="image/x-icon" href="/assets/icons/brand.png" />
     <link rel="stylesheet" href="/styles/global.css" />
+    <link rel="stylesheet" href="/libs/notyf/notyf.min.css">
     <link rel="stylesheet" href="/styles/login.css">
   </head>
   <body>
@@ -21,22 +22,31 @@
         <div class="title">
           <h5>ورود</h5>
         </div>
-        <form action="">
+        <form action="/auth/login" method="post">
           <div class="inputs">
             <div class="input">
               <img src="/assets/icons/mail.png" alt="" />
               <input
                 type="email"
                 name="email"
+                value="<%= oldData ? oldData.email : '' %>"
                 required
                 placeholder="ایمیل خود را وارد کنید..."
               />
             </div>
+            <% if(errors && errors.length > 0){ %>
+              <% errors.map(error => { %>
+                <% if(error.field == "email") { %>
+                  <li><%= error.error %></li>
+                <% } %>
+              <% }); %>
+            <% } %>
             <div class="input">
               <img src="/assets/icons/password.png" alt="" />
               <input
                 type="password"
                 name="password"
+                value="<%= oldData ? oldData.password : '' %>"
                 required
                 placeholder="رمز عبور خود را وارد کنید..."
               />
@@ -44,6 +54,13 @@
                 <img src="/assets/icons/eye.png" alt="">
               </button>
             </div>
+            <% if(errors && errors.length > 0){ %>
+              <% errors.map(error => { %>
+                <% if(error.field == "password") { %>
+                  <li><%= error.error %></li>
+                <% } %>
+              <% }); %>
+            <% } %>
           </div>
           <button type="submit">ورود</button>
         </form>
@@ -51,6 +68,12 @@
         <a href="/">صفحه اصلی</a>
       </div>
     </div>
+    <script src="/libs/notyf/notyf.min.js"></script>
     <script src="/scripts/login.js"></script>
+    <script>
+      if('<%= error %>') {
+        notyf.error('<%= error %>');
+      }
+    </script>
   </body>
 </html>
