used sweetalert2 in pages

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/libs/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="/styles/global.css" />
     <link rel="stylesheet" href="/styles/product.css">
+    <link rel="stylesheet" href="/libs/sweetalert2/sweetalert2.min.css">
   </head>
   <body>
     <div class="overlay hidden"></div>
@@ -284,6 +285,7 @@
       </main>
       <%- include("includes/footer") %>
     </div>
+    <script src="/libs/sweetalert2/sweetalert2.all.min.js"></script>
     <script src="/libs/swiper/swiper-bundle.min.js"></script>
     <script src="/scripts/global.js"></script>
     <script src="/scripts/product.js"></script>
