--- a/views/products.ejs
+++ b/views/products.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/styles/global.css" />
     <link rel="stylesheet" href="/libs/flexboxgrid/flexboxgrid.css" />
     <link rel="stylesheet" href="/styles/products.css">
+    <link rel="stylesheet" href="/libs/sweetalert2/sweetalert2.min.css">
   </head>
   <body>
     <div class="overlay hidden"></div>
@@ -220,6 +221,7 @@
       </main>
       <%- include("includes/footer") %>
     </div>
+    <script src="/libs/sweetalert2/sweetalert2.all.min.js"></script>
     <script src="/scripts/global.js"></script>
   </body>
 </html>
