--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -7,6 +7,7 @@
     <link rel="icon" image="x-icon" href="/assets/icons/brand.png">
     <link rel="stylesheet" href="/styles/global.css">
     <link rel="stylesheet" href="/styles/favorites.css">
+    <link rel="stylesheet" href="/libs/sweetalert2/sweetalert2.min.css">
 </head>
 <body>
     <div class="overlay hidden"></div>
@@ -115,6 +116,7 @@
       </main>
       <%- include("includes/footer") %>
     </div>
+    <script src="/libs/sweetalert2/sweetalert2.all.min.js"></script>
     <script src="/scripts/global.js"></script>
 </body>
 </html>
