--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/libs/notyf/notyf.min.css">
     <link rel="stylesheet" href="/styles/global.css" />
     <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="/libs/sweetalert2/sweetalert2.min.css">
   </head>
   <body>
     <div class="overlay hidden"></div>
@@ -226,6 +227,7 @@
     <script>
       window.isLoggedInNow = JSON.parse('<%- JSON.stringify(isLoggedInNow) %>')
     </script>
+    <script src="/libs/sweetalert2/sweetalert2.all.min.js"></script>
     <script src="/libs/notyf/notyf.min.js"></script>
     <script src="/libs/swiper/swiper-bundle.min.js"></script>
     <script src="/scripts/global.js"></script>
