--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/assets/icons/brand.png" />
     <link rel="stylesheet" href="/styles/global.css" />
     <link rel="stylesheet" href="/styles/search-results.css">
+    <link rel="stylesheet" href="/libs/sweetalert2/sweetalert2.min.css">
   </head>
   <body>
     <div class="overlay hidden"></div>
@@ -77,6 +78,7 @@
       <div class="header-overlay hidden"></div>
       <%- include("includes/footer") %>
     </div>
+    <script src="/libs/sweetalert2/sweetalert2.all.min.js"></script>
     <script src="/scripts/global.js"></script>
   </body>
 </html>
