--- a/views/includes/drawer.ejs
+++ b/views/includes/drawer.ejs
@@ -12,10 +12,23 @@
     </div>
   </div>
   <div class="section-2">
-    <div class="auth-links">
-      <a href="/auth/register">ثبت نام</a>
-      <a href="/auth/login">ورود</a>
-    </div>
+    <% if(!login_state){ %>
+      <div class="auth-links">
+        <a href="/auth/register">ثبت نام</a>
+        <a href="/auth/login">ورود</a>
+      </div>
+    <% } else  { %>
+      <div class="user-data">
+        <div class="name">
+          <img src="/assets/icons/person.png" alt="">
+          <span><%= user.first_name %></span>
+        </div>
+        <button id="exit-from-account-drawer-btn">
+          <img src="/assets/icons/exit.png" alt="">
+          <span>خروج</span>
+        </button>
+      </div>
+    <% } %>
     <div class="action-links">
       <a href="/cart">
         <img src="/assets/icons/cart.png" alt="" />
