--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -16,18 +16,12 @@
       <%- include("includes/header") %>
       <div class="header-overlay hidden"></div>
       <main>
-        <section class="about-us">
-            <h1>درباره ما</h1>
-            <p>
-            ما یک تیم جوان و پرانرژی هستیم که با هدف ایجاد تجربه‌ای متفاوت در خرید
-            آنلاین فعالیت خود را آغاز کردیم. از همان ابتدا تلاش کردیم تا با ارائه
-            محصولات متنوع، باکیفیت و خدماتی حرفه‌ای، رضایت کامل مشتریانمان را جلب
-            کنیم. در فروشگاه ما، شما فقط خرید نمی‌کنید؛ بلکه وارد دنیایی از
-            انتخاب‌های خاص، قیمت‌های منصفانه و پشتیبانی صمیمانه می‌شوید. ما به
-            سلیقه شما احترام می‌گذاریم و هر روز در تلاشیم تا بهتر از دیروز
-            باشیم.ممنون که به ما اعتماد دارید.❤️
-            </p>
-        </section>
+        <% if(aboutUsText) { %>
+          <section class="about-us">
+              <h1>درباره ما</h1>
+              <p><%= aboutUsText.value %></p>
+          </section>
+        <% } %>
         <% if(featureCards) { %>
           <section class="features">
             <h3>ویژگی های ما</h3>
