--- a/views/support.ejs
+++ b/views/support.ejs
@@ -17,7 +17,9 @@
       <main>
         <section class="support-section">
             <h1>پشتیبانی</h1>
-            <p>پشتیبانی ما با هدف پاسخ‌گویی سریع، دقیق و مؤثر به نیازها و سوالات کاربران طراحی شده است. در این بخش، تلاش کرده‌ایم تا تمامی پرسش‌های رایج، مشکلات احتمالی و راهنمایی‌های لازم را در اختیار شما قرار دهیم تا تجربه‌ای روان و بدون دغدغه از استفاده از خدمات ما داشته باشید. رضایت شما اولویت ماست و همواره آماده‌ایم تا در کوتاه‌ترین زمان ممکن پاسخ‌گوی درخواست‌ها، نظرات و گزارش‌های شما باشیم.</p>
+            <% if(supportText) { %>
+              <p><%= supportText.value %></p>
+            <% } %>
             <% if(supportCards) { %>
               <div class="contact">
                 <% supportCards.map(supportCard => { %>
