handled the products data in home page

--- a/views/includes/products-list.ejs
+++ b/views/includes/products-list.ejs
@@ -2,158 +2,25 @@
   <div class="swiper swiper-products sp-1">
     <div class="swiper-button-prev"></div>
     <div class="swiper-wrapper">
-      <div class="swiper-slide">
-        <div class="product-card">
-          <a class="special" href="/product">
-            <div class="row-1">
-              <img src="/assets/images/croma.png" alt="" />
-            </div>
-            <div class="row-2">
-              <h5>
-                هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)
-              </h5>
-              <div class="rate">
-                <span class="rate-number">۵</span>
-                <img src="/assets/icons/star.png" alt="" />
+      <% products.map(product => { %>
+        <div class="swiper-slide">
+          <div class="product-card">
+            <a class="special" href="/product/<%= product.product_code %>">
+              <div class="row-1">
+                <img src="<%= product.image %>" alt="" />
               </div>
-              <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="swiper-slide">
-        <div class="product-card">
-          <a class="special" href="/product">
-            <div class="row-1">
-              <img src="/assets/images/croma.png" alt="" />
-            </div>
-            <div class="row-2">
-              <h5>
-                هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)
-              </h5>
-              <div class="rate">
-                <span class="rate-number">۵</span>
-                <img src="/assets/icons/star.png" alt="" />
+              <div class="row-2">
+                <h5><%= product.title %></h5>
+                <div class="rate">
+                  <span class="rate-number"><%= toPersianDigitsHelper(product.rate) %></span>
+                  <img src="/assets/icons/star.png" alt="" />
+                </div>
+                <span class="price"><%= product.price_fa %> تومان</span>
               </div>
-              <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-            </div>
-          </a>
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="swiper-slide">
-        <div class="product-card">
-          <a class="special" href="/product">
-            <div class="row-1">
-              <img src="/assets/images/croma.png" alt="" />
-            </div>
-            <div class="row-2">
-              <h5>
-                هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)
-              </h5>
-              <div class="rate">
-                <span class="rate-number">۵</span>
-                <img src="/assets/icons/star.png" alt="" />
-              </div>
-              <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="swiper-slide">
-        <div class="product-card">
-          <a class="special" href="/product">
-            <div class="row-1">
-              <img src="/assets/images/croma.png" alt="" />
-            </div>
-            <div class="row-2">
-              <h5>
-                هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)
-              </h5>
-              <div class="rate">
-                <span class="rate-number">۵</span>
-                <img src="/assets/icons/star.png" alt="" />
-              </div>
-              <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="swiper-slide">
-        <div class="product-card">
-          <a class="special" href="/product">
-            <div class="row-1">
-              <img src="/assets/images/croma.png" alt="" />
-            </div>
-            <div class="row-2">
-              <h5>
-                هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)
-              </h5>
-              <div class="rate">
-                <span class="rate-number">۵</span>
-                <img src="/assets/icons/star.png" alt="" />
-              </div>
-              <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="swiper-slide">
-        <div class="product-card">
-          <a class="special" href="/product">
-            <div class="row-1">
-              <img src="/assets/images/croma.png" alt="" />
-            </div>
-            <div class="row-2">
-              <h5>
-                هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)
-              </h5>
-              <div class="rate">
-                <span class="rate-number">۵</span>
-                <img src="/assets/icons/star.png" alt="" />
-              </div>
-              <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="swiper-slide">
-        <div class="product-card">
-          <a class="special" href="/product">
-            <div class="row-1">
-              <img src="/assets/images/croma.png" alt="" />
-            </div>
-            <div class="row-2">
-              <h5>
-                هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)
-              </h5>
-              <div class="rate">
-                <span class="rate-number">۵</span>
-                <img src="/assets/icons/star.png" alt="" />
-              </div>
-              <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="swiper-slide">
-        <div class="product-card">
-          <a class="special" href="/product">
-            <div class="row-1">
-              <img src="/assets/images/croma.png" alt="" />
-            </div>
-            <div class="row-2">
-              <h5>
-                هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)
-              </h5>
-              <div class="rate">
-                <span class="rate-number">۵</span>
-                <img src="/assets/icons/star.png" alt="" />
-              </div>
-              <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-            </div>
-          </a>
-        </div>
-      </div>
+      <% }); %>
     </div>
     <div class="swiper-button-next"></div>
     <div class="swiper-pagination"></div>
